# Smart-Travel-Planner-Agent

./: .env.example  .gitignore  CAPSTONE.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  README.md  Smart-Travel-Planner-Agent  __init__.py  agent.py  architecture_diagram.md  docker-compose.yml  emission_factors.csv  pyproject.toml  requirements.txt  server_cert.pem  test_tools.py  tools.py
.github/workflows/: ci.yml
src/smart_travel_planner/: __init__.py  main.py
src/smart_travel_planner/config/: __init__.py  logging_config.py  settings.py
src/smart_travel_planner/core/: __init__.py  agent.py  itinerary.py
src/smart_travel_planner/exceptions/: __init__.py  base.py  travel_exceptions.py
src/smart_travel_planner/models/: __init__.py  api_models.py  travel_models.py
src/smart_travel_planner/services/: __init__.py  base.py  emissions.py  itinerary.py  weather.py
src/smart_travel_planner/utils/: __init__.py  cache.py  geo_utils.py  http_client.py  security.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: test_travel_services.py
tests/unit/: test_config.py  test_http_client.py  test_validators.py
